--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,16 @@
         "php": "^8.3",
         "hiblaphp/promise": "*"
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Test\\": "tests/"
+        }
+    },
      "require-dev": {
         "phpstan/phpstan": "^2.0",
         "phpstan/phpstan-strict-rules": "^2.0",
-        "laravel/pint": "^1.0"
+        "laravel/pint": "^1.0",
+        "pestphp/pest": "^4.4"
     },
     "autoload": {
         "psr-4": {
@@ -18,5 +24,10 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
+    }
 }
